--- a/Views/OrderPlacings/Index.cshtml
+++ b/Views/OrderPlacings/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Order Placing</h1>
+<h1>Place your order</h1>
 <h2>Menu</h2>
 <ul>
     <li>Margherita Pizza</li>
