--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="OrderPlacings" asp-action="Index">Place your order</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="OrderPlacings" asp-action="Index">Order Placing</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="OrderPlaceds" asp-action="Index">View your order</a>
